==> MiSTle-Dev/FPGA-Companion/src/bl616/mcu_hw.c <==
#include <FreeRTOS.h>
#include "mem.h"
#include "shell.h"
#include "semphr.h"
#include "usbh_core.h"
#include "usbh_hid.h"
#include "usbh_msc.h"
#include "usbd_core.h"
#include "ff.h"
#include "fatfs_diskio_register.h"
#include "../spi.h"
#include "../hid.h"
#include "../sdc.h"
#include "../sysctrl.h"
#include "../debug.h"
#include "../mcu_hw.h"
#include "../inifile.h"
#include "bl616_glb.h"
#include "bflb_mtimer.h"
#include "bflb_spi.h"
#include "bflb_dma.h"
#include "bflb_gpio.h"
#include "bflb_wdg.h"
#include "bflb_wo.h"
#include "bflb_uart.h"
#include "bflb_clock.h"
#include "bflb_flash.h"
#include <lwip/tcpip.h>
#include "lwip/tcp.h"
#include "lwip/dns.h"
#include "lwip/pbuf.h"
#include <lwip/sockets.h>
#include <lwip/netdb.h>
#include "bl_fw_api.h"
#include "wifi_mgmr_ext.h"
#include "wifi_mgmr.h"
#include "rfparam_adapter.h"
#include "bflb_rtc.h"
#include "bflb_acomp.h"
#include "bflb_efuse.h"
#include "board.h"
#include "bl616_tzc_sec.h"
#include "task.h"
#include "timers.h"
#include "bflb_irq.h"
#include "../at_wifi.h"
#include "../jtag.h"
#include "./sdc_direct.h"
#define ENABLE_JTAG
#define PIN_nJTAGSEL  GPIO_PIN_28
#include "../jtag.h"
#include "./sdc_direct.h"
#define ENABLE_JTAG
#include "../jtag.h"
#include "./sdc_direct.h"
#define ENABLE_JTAG
#define PIN_nJTAGSEL  GPIO_PIN_10
#define ENABLE_JTAG
#define PIN_nJTAGSEL  GPIO_PIN_28
#define ENABLE_JTAG
#define PIN_nJTAGSEL  GPIO_PIN_11
#define PIN_JTAG_TMS GPIO_PIN_16
#define PIN_JTAG_TCK GPIO_PIN_10

static void mcu_hw_spi_init(void) {
  // when FPGA sets data on rising edge:
  // stable with long cables up to 20Mhz
  // short cables up to 32MHz
  gpio = bflb_device_get_by_name("gpio");

  /* spi miso */
  bflb_gpio_init(gpio, SPI_PIN_MISO, GPIO_FUNC_SPI0 | GPIO_ALTERNATE | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_3);
  /* spi mosi */
  bflb_gpio_init(gpio, SPI_PIN_MOSI, GPIO_FUNC_SPI0 | GPIO_ALTERNATE | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_3);
  /* spi clk */
  bflb_gpio_init(gpio, SPI_PIN_SCK, GPIO_FUNC_SPI0 | GPIO_ALTERNATE | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_3);
  /* spi cs */
  bflb_gpio_init(gpio, SPI_PIN_CSN, GPIO_OUTPUT | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_3);
  bflb_gpio_set(gpio, SPI_PIN_CSN);

  struct bflb_spi_config_s spi_cfg = {
    .freq = 20000000,   // 20MHz
    .role = SPI_ROLE_MASTER,
    .mode = SPI_MODE1,         // mode 1: idle state low, data sampled on falling edge
    .data_width = SPI_DATA_WIDTH_8BIT,
    .bit_order = SPI_BIT_MSB,
    .byte_order = SPI_BYTE_LSB,
    .tx_fifo_threshold = 0,
    .rx_fifo_threshold = 0,
  };
  
  spi_dev = bflb_device_get_by_name("spi0");
  bflb_spi_init(spi_dev, &spi_cfg);

  bflb_spi_feature_control(spi_dev, SPI_CMD_SET_DATA_WIDTH, SPI_DATA_WIDTH_8BIT);

  // semaphore to access the spi bus
  spi_sem = xSemaphoreCreateMutex();

  /* interrupt input */
  bflb_irq_disable(gpio->irq_num);
  bflb_gpio_init(gpio, SPI_PIN_IRQ, GPIO_INPUT | GPIO_PULLUP | GPIO_SMT_EN);
  bflb_gpio_int_init(gpio, SPI_PIN_IRQ, GPIO_INT_TRIG_MODE_SYNC_LOW_LEVEL);
  bflb_gpio_irq_attach(SPI_PIN_IRQ, spi_isr);
}

void mcu_hw_spi_begin(void) {
  xSemaphoreTake(spi_sem, 0xffffffffUL); // wait forever
  bflb_gpio_reset(gpio, SPI_PIN_CSN);
}

unsigned char mcu_hw_spi_tx_u08(unsigned char b) {
  return bflb_spi_poll_send(spi_dev, b);
}

void mcu_hw_spi_end(void) {
  bflb_gpio_set(gpio, SPI_PIN_CSN);
  xSemaphoreGive(spi_sem);
}

void mcu_hw_irq_ack(void) {
  // re-enable the interrupt since it was now serviced outside the irq handeler
  bflb_irq_enable(gpio->irq_num);   // resume interrupt processing
}

void mcu_hw_init(void) {
  mn_board_init();

  debugf("\r\n\r\n" LOGO "           FPGA Companion for BL616\r\n\r\n");

  gpio = bflb_device_get_by_name("gpio");

#ifdef M0S_DOCK
  // init on-board LEDs
  bflb_gpio_init(gpio, GPIO_PIN_27, GPIO_OUTPUT | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_0);
  bflb_gpio_init(gpio, GPIO_PIN_28, GPIO_OUTPUT | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_0);
  // both leds off
  bflb_gpio_set(gpio, GPIO_PIN_27);
  bflb_gpio_set(gpio, GPIO_PIN_28);
#elif TANG_NANO20K
  /* configure JTAGSEL_n */
#elif TANG_MEGA138KPRO
  /* LED6 enable */
  bflb_gpio_init(gpio, GPIO_PIN_20, GPIO_OUTPUT | GPIO_FLOAT | GPIO_SMT_EN | GPIO_DRV_3);
  bflb_gpio_reset(gpio, GPIO_PIN_20);
  /* configure JTAGSEL_n */
  bflb_gpio_init(gpio, PIN_nJTAGSEL, GPIO_OUTPUT | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_3);
  bflb_gpio_set(gpio, PIN_nJTAGSEL);
  #elif TANG_PRIMER25K
  /* LED5 enable */
  bflb_gpio_init(gpio, GPIO_PIN_20, GPIO_OUTPUT | GPIO_FLOAT | GPIO_SMT_EN | GPIO_DRV_3);
  bflb_gpio_reset(gpio, GPIO_PIN_20);
  /* configure JTAGSEL_n */
  bflb_gpio_init(gpio, PIN_nJTAGSEL, GPIO_OUTPUT | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_3);
  bflb_gpio_set(gpio, PIN_nJTAGSEL);
#elif TANG_CONSOLE60K
  /* configure JTAGSEL_n */
  bflb_gpio_init(gpio, PIN_nJTAGSEL, GPIO_OUTPUT | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_3);
  bflb_gpio_set(gpio, PIN_nJTAGSEL);
  /* configure PIN_TF_SDIO_SEL to FPGA */
  bflb_gpio_init(gpio, PIN_TF_SDIO_SEL, GPIO_OUTPUT | GPIO_FLOAT | GPIO_SMT_EN | GPIO_DRV_3);
  bflb_gpio_reset(gpio, PIN_TF_SDIO_SEL);
#elif TANG_MEGA60K
  /* configure JTAGSEL_n */
  bflb_gpio_init(gpio, PIN_nJTAGSEL, GPIO_OUTPUT | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_3);
  bflb_gpio_set(gpio, PIN_nJTAGSEL);
#endif
  mcu_hw_spi_init();

  uart0 = bflb_device_get_by_name("uart0");
  shell_init_with_task(uart0);

#ifdef M0S_DOCK
  wifi_init();
#elif TANG_CONSOLE60K
  wifi_init();
#elif TANG_MEGA60K
  wifi_init();
#endif

#ifdef ENABLE_JTAG
  mcu_hw_jtag_init();
#endif
  usb_host();
}

void mcu_hw_reset(void) {
  debugf("HW reset");

  struct bflb_device_s *wdg;
  struct bflb_wdg_config_s wdg_cfg;
  wdg_cfg.clock_source = WDG_CLKSRC_32K;
  wdg_cfg.clock_div = 31;
  wdg_cfg.comp_val = 1000;
  wdg_cfg.mode = WDG_MODE_RESET;

  wdg = bflb_device_get_by_name("watchdog");
  bflb_wdg_init(wdg, &wdg_cfg);
  bflb_wdg_start(wdg); // to be sure...

  gpio = bflb_device_get_by_name("gpio");
  bflb_irq_disable(gpio->irq_num);

  bflb_gpio_deinit(gpio, GPIO_PIN_0);
  bflb_gpio_deinit(gpio, GPIO_PIN_1);
  bflb_gpio_deinit(gpio, GPIO_PIN_2);
  bflb_gpio_deinit(gpio, GPIO_PIN_3);

  debugf("usb host deinit");
  usbh_deinitialize(0);
  bflb_mtimer_delay_ms(250);

  debugf("start usb hid device mode");
  hid_keyboard_init(0, USB_BASE);
  debugf("deinit done and ready for POR reset");
  bflb_mtimer_delay_ms(100);
  GLB_SW_POR_Reset();
  while (1) {
    /*empty dead loop*/
  }
}

static const char *auth_mode_str(int authmode) {
  static const struct { int mode; char *str; } mode_str[] = {
    { WIFI_EVENT_BEACON_IND_AUTH_OPEN, "OPEN" },
    { WIFI_EVENT_BEACON_IND_AUTH_WEP, "WEP" },
    { WIFI_EVENT_BEACON_IND_AUTH_WPA_PSK, "WPA-PSK" },
    { WIFI_EVENT_BEACON_IND_AUTH_WPA2_PSK,"WPA2-PSK" },
    { WIFI_EVENT_BEACON_IND_AUTH_WPA_WPA2_PSK, "WPA-WPA2-PSK" },
    { WIFI_EVENT_BEACON_IND_AUTH_WPA_ENT, "ENTERPRISE" },
    { WIFI_EVENT_BEACON_IND_AUTH_WPA3_SAE, "WPA3-SAE" },
    { WIFI_EVENT_BEACON_IND_AUTH_WPA2_PSK_WPA3_SAE, "WPA2-PSK-WPA3-SAE" },
    { -1, "<unknown>" }
  };

  int i;
  for(i=0;mode_str[i].mode != -1;i++)
    if(mode_str[i].mode == authmode || mode_str[i].mode == -1)
      return mode_str[i].str;

  return mode_str[i].str;
}

void mcu_hw_wifi_scan(void) {
  debugf("WiFi: Performing scan");

  static wifi_mgmr_scan_params_t config;
  /* duration in microseconds for which channel is scanned, default 220000 */
  config.duration = 220000;

  memset(&config, 0, sizeof(wifi_mgmr_scan_params_t));
  if (0 != wifi_mgmr_sta_scan(&config)) {
    at_wifi_puts("Scan failed\r\n");
    return;
  }

  at_wifi_puts("Scanning...\r\n"); 
  wait4event(1, 1);

  if (0 != wifi_mgmr_scan_ap_all(NULL, NULL, wifi_scan_item_cb)) {
    at_wifi_puts("Scan all failed\r\n");
  };
}

void mcu_hw_wifi_connect(char *ssid, char *key) {
  debugf("WiFI: connect to %s/%s", ssid, key);
  
  at_wifi_puts("WiFI: Connecting...");
  if(wifi_ssid) free(wifi_ssid);
  if(wifi_key) free(wifi_key);

  if (wifi_mgmr_sta_state_get() == 1) {
    wifi_sta_disconnect();
  }

  // store ssid/key for retry
  wifi_ssid = strdup(ssid);
  wifi_key = strdup(key);
  
  s_retry_num = 0;
  if (0 != wifi_mgmr_sta_quickconnect(wifi_ssid, wifi_key, 0, 0)) {
    debugf("\r\nWiFI: STA failed!\r\n");
  } else {
    wait4event(4, 4);
    if (wifi_mgmr_sta_state_get() == 1 ) {
      at_wifi_puts("\r\nWiFI: Connected\r\n");
      wifi_info();
    } else {
      debugf("\r\nWiFI: Connection failed!\r\n");
      at_wifi_puts("\r\nWiFI: Connection failed!\r\n");
      }
    }
}

void mcu_hw_tcp_connect(char *host, int port) {
  static int lport;
  static ip_addr_t address;

  lport = port;
  debugf("connecting to %s %d", host, lport);
  
  int err = dns_gethostbyname(host, &address, dns_found, &lport);

  if(err != ERR_OK && err != ERR_INPROGRESS) {
    debugf("DNS error");
    at_wifi_puts("Cannot resolve host\r\n");
    return;
  }

  if(err == ERR_OK)
    mcu_tcp_connect(&address, port);

  else if(err == ERR_INPROGRESS) 
    debugf("DNS in progress");
}
